# hoshizora

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  package.json  pnpm-lock.yaml  tests.yml
.github/workflows/: grcov.yml  test.yaml
hoshizora-memory-reader/: Cargo.toml  README.md
hoshizora-parser/: Cargo.toml  README.md
hoshizora-parser/src/: difficulty.rs  editor.rs  file_sections.rs  format.rs  general.rs  lib.rs
hoshizora-parser/tests/: end_time.osu  integration_tests.rs
src/: difficulty.rs  editor.rs  events.rs  file_sections.rs  general.rs  hit_objects.rs  lib.rs  metadata.rs  timing_points.rs
tests/: integration_tests.rs
