[package]
name = "hoshizora-memory-reader"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.28.2"
